--- a/index.html
+++ b/index.html
@@ -21,6 +21,28 @@
     <a href="#portfolio">Portfolio</a>
     <a href="#contact">Contact</a>
   </nav>
+  <!-- PARALLAX SECTION 1 -->
+<section id="home" class="parallax bg1">
+  <div class="caption">
+    <h1>WELCOME</h1>
+  </div>
+</section>
+
+<!-- ABOUT -->
+<section id="about" class="content">
+  <h2>About Me</h2>
+  <p>
+    This is a sample parallax website created using HTML and CSS.
+    The goal is to demonstrate scrolling effects and responsive design.
+  </p>
+</section>
+
+<!-- PARALLAX SECTION 2 -->
+<section class="parallax bg2">
+  <div class="caption">
+    <h1>PORTFOLIO</h1>
+  </div>
+</section>
 </header>
 
 <body>
