--- a/index.html
+++ b/index.html
@@ -44,10 +44,33 @@
   </div>
 </section>
 </header>
+<!-- PORTFOLIO -->
+<section id="portfolio" class="content">
+  <h2>My Work</h2>
+  <p>Here you can showcase images, projects, or descriptions.</p>
+</section>
 
+<!-- PARALLAX SECTION 3 -->
+<section class="parallax bg3">
+  <div class="caption">
+    <h1>CONTACT</h1>
+  </div>
+</section>
+
+<!-- CONTACT -->
+<section id="contact" class="content">
+  <h2>Contact Me</h2>
+
+  <!-- Google Map -->
+  <iframe
+    src="https://www.google.com/maps?q=Kigali,Rwanda&output=embed"
+    loading="lazy">
+  </iframe>
+</section>
 <body>
     <title>Parallax Project</title>
 </head>
+
 <body>
     
 </body>
