--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
 <!-- NAVIGATION -->
@@ -23,10 +23,11 @@
     <a href="#portfolio">Portfolio</a>
     <a href="#contact">Contact</a>
   </nav>
-  <!-- PARALLAX SECTION 1 -->
-<section id="home" class="parallax bg1">
-  <div class="caption">
+ <!-- HOME / HERO SECTION -->
+<section id="home" class="parallax home-bg">
+  <div class="home-text">
     <h1>WELCOME</h1>
+    <p>To My Parallax Website</p>
   </div>
 </section>
 
