--- a/index.html
+++ b/index.html
@@ -39,14 +39,9 @@
     We have created a fictional "personal" website/blog, and our fictional character is a hobby photographer. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
   </p>
 <table class="about-table">
-  <tr>
-    <!-- IMAGE CELL -->
-    <td class="photo-cell">
-     
-    </td>
+    <td class="photo-cell"> </td>
 
-    <!-- TEXT CELL -->
-    <td class="text-cell">
+        <td class="text-cell">
       <h3>My Name</h3>
        <img src="me.jpeg" alt="Hobby Photographer">
       
@@ -82,6 +77,19 @@
 <!-- CONTACT -->
 <section id="contact" class="content">
   <h2>Contact Me</h2>
+  
+  <form>
+    <label>Your Name:</label><br>
+    <input type="text"><br><br>
+
+    <label>Your Email:</label><br>
+    <input type="email"><br><br>
+
+    <label>Your Message:</label><br>
+    <textarea rows="4" cols="30"></textarea><br><br>
+
+    <input id="button" type="submit" value="Send">
+</form>
 
   <!-- Google Map -->
   <iframe
