--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Parallax Project</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
+    <script src="https://cdn.tailwindcss.com"></script> 
 </head>
     <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
@@ -23,13 +24,15 @@
     <a href="#portfolio">Portfolio</a>
     <a href="#contact">Contact</a>
   </nav>
- <!-- HOME / HERO SECTION -->
+   <!-- HOME / HERO SECTION -->
 <section id="home" class="parallax home-bg">
   <div class="home-text">
     <h1>WELCOME TO MY WEBSITE</h1>
     
   </div>
-</section>
+</section> <nav class="flex justify-center gap-8 bg-white shadow-md py-4 font-semibold text-gray-700 sticky top-0 z-50">
+
+<nav class
 
 <!-- ABOUT -->
 <section id="about" class="content">
@@ -42,7 +45,7 @@
 
     <div class="profile-header">
         <span class="icon">👤</span>
-        <span class="name">My Name</span>
+        <span class="name">Rachel</span>
     </div>
 
     <div class="profile-content">
@@ -68,22 +71,37 @@
 
 </section>
 
-<!-- PARALLAX SECTION 2 -->
-<section class="parallax bg2">
-  <div class="caption">
-    <h1>PORTFOLIO</h1>
+<section id="portfolio" class="content max-w-6xl mx-auto py-16 px-4">
+  <h2 class="text-4xl font-bold text-center mb-8">My Work</h2>
+  <p class="text-center text-gray-600 mb-12">Here you can showcase images, projects, or descriptions.</p>
+
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+    <div class="bg-white rounded-lg shadow-md overflow-hidden">
+      <img src="project1.jfif" alt="Project 1" class="w-full h-48 object-cover">
+      <div class="p-4">
+        <h3 class="font-semibold text-lg mb-2">Project One</h3>
+        <p class="text-gray-600 text-sm">Description of your project. Tools, tech, or concept used.</p>
+      </div>
+    </div>
+
+    <div class="bg-white rounded-lg shadow-md overflow-hidden">
+      <img src="project2.jpg" alt="Project 2" class="w-full h-48 object-cover">
+      <div class="p-4">
+        <h3 class="font-semibold text-lg mb-2">Project Two</h3>
+        <p class="text-gray-600 text-sm">Description of your project. Tools, tech, or concept used.</p>
+      </div>
+    </div>
+
+    <div class="bg-white rounded-lg shadow-md overflow-hidden">
+      <img src="project3.jpg" alt="Project 3" class="w-full h-48 object-cover">
+      <div class="p-4">
+        <h3 class="font-semibold text-lg mb-2">Project Three</h3>
+        <p class="text-gray-600 text-sm">Description of your project. Tools, tech, or concept used.</p>
+      </div>
+    </div>
   </div>
 </section>
-</header>
-<!-- PORTFOLIO -->
-<section id="portfolio" class="content">
-  <h2>My Work</h2>
-  <p>Here you can showcase images, projects, or descriptions.</p>
-</section>
 
-<!-- PARALLAX SECTION 3 -->
-<section class="parallax bg3">
-</section>
 
 <!-- CONTACT -->
 <section id="contact" class="content">
