--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    <!-- HOME / HERO SECTION -->
 <section id="home" class="parallax home-bg">
   <div class="home-text">
-    <h1>WELCOME TO MY WEBSITE</h1>
+    <h1>WELCOME TO MY PARALLAX WEBSITE</h1>
     
   </div>
 </section> <nav class="flex justify-center gap-8 bg-white shadow-md py-4 font-semibold text-gray-700 sticky top-0 z-50">
@@ -102,6 +102,77 @@
   </div>
 </section>
 
+<!-- ================= SKILLS & STATS SECTION ================= -->
+<section class="bg-white py-20">
+  <div class="max-w-6xl mx-auto px-6">
+
+    <!-- Skills -->
+    <div class="space-y-8 mb-16">
+
+      <!-- Skill 1 -->
+      <div>
+        <div class="flex justify-between mb-2 text-sm font-medium">
+          <span>Photography</span>
+          <span>90%</span>
+        </div>
+        <div class="w-full bg-gray-200 h-4 rounded">
+          <div class="bg-gray-700 h-4 rounded" style="width: 90%"></div>
+        </div>
+      </div>
+
+      <!-- Skill 2 -->
+      <div>
+        <div class="flex justify-between mb-2 text-sm font-medium">
+          <span>Web Design</span>
+          <span>85%</span>
+        </div>
+        <div class="w-full bg-gray-200 h-4 rounded">
+          <div class="bg-gray-700 h-4 rounded" style="width: 85%"></div>
+        </div>
+      </div>
+
+      <!-- Skill 3 -->
+      <div>
+        <div class="flex justify-between mb-2 text-sm font-medium">
+          <span>Photoshop</span>
+          <span>75%</span>
+        </div>
+        <div class="w-full bg-gray-200 h-4 rounded">
+          <div class="bg-gray-700 h-4 rounded" style="width: 75%"></div>
+        </div>
+      </div>
+
+    </div>
+
+    <!-- Stats -->
+    <div class="bg-gray-700 text-white py-10 rounded-lg">
+      <div class="grid grid-cols-2 md:grid-cols-4 text-center gap-8">
+
+        <div>
+          <h3 class="text-2xl font-bold">14+</h3>
+          <p class="text-sm text-gray-300">Partners</p>
+        </div>
+
+        <div>
+          <h3 class="text-2xl font-bold">55+</h3>
+          <p class="text-sm text-gray-300">Projects Done</p>
+        </div>
+
+        <div>
+          <h3 class="text-2xl font-bold">89+</h3>
+          <p class="text-sm text-gray-300">Happy Clients</p>
+        </div>
+
+        <div>
+          <h3 class="text-2xl font-bold">150+</h3>
+          <p class="text-sm text-gray-300">Meetings</p>
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+</section>
 
 <!-- CONTACT -->
 <section id="contact" class="content">
@@ -118,6 +189,7 @@
 
     <input id="button" type="submit" value="Send">
 </form>
+
 
   <!-- Google Map -->
   <iframe
